# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//express/components/ipfs/buildflags/buildflags.gni")
import("//express/components/tor/buildflags/buildflags.gni")
import("//express/utility/importer/sources.gni")

brave_utility_sources = [
  "//express/utility/brave_content_utility_client.cc",
  "//express/utility/brave_content_utility_client.h",
]

if (is_android) {
  brave_utility_sources += [
    "//chrome/utility/importer/bookmark_html_reader.cc",
    "//chrome/utility/importer/bookmark_html_reader.h",
  ]
}

brave_utility_sources += brave_utility_importer_sources

brave_utility_deps = [
  "//express/components/ipfs/buildflags",
  "//express/components/services/bat_ads:lib",
  "//express/components/services/bat_ads/public/interfaces",
  "//express/components/services/bat_rewards:lib",
  "//express/components/services/bat_rewards/public/interfaces",
  "//express/components/tor/buildflags",
  "//mojo/public/cpp/bindings",
]

brave_utility_deps += brave_utility_importer_deps

if (enable_ipfs) {
  brave_utility_deps += [
    "//express/components/services/ipfs",
    "//express/components/services/ipfs/public/mojom",
  ]
}

if (enable_tor) {
  brave_utility_deps += [
    "//express/components/services/tor",
    "//express/components/services/tor/public/interfaces",
  ]
}

brave_utility_public_deps = []
brave_utility_public_deps += brave_utility_importer_public_deps
