# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//express/build/config.gni")
import("//build/config/android/rules.gni")

source_set("android_browser_process") {
  check_includes = false

  sources = [
    "//express/browser/brave_ads/android/brave_ads_native_helper.cc",
    "brave_feature_util.cc",
    "brave_local_state_android.cc",
    "brave_relaunch_utils.cc",
    "brave_shields_content_settings.cc",
    "brave_shields_content_settings.h",
    "brave_sync_worker.cc",
    "brave_sync_worker.h",
  ]

  deps = [
    "//base",
    "//express/browser/android/preferences",
    "//express/browser/android/safe_browsing",
    "//express/browser/brave_ads/android:jni_headers",
    "//express/build/android:jni_headers",
    "//express/components/brave_ads/browser",
    "//express/components/brave_shields/browser",
    "//express/components/brave_sync",
    "//express/components/brave_sync:crypto",
    "//express/components/brave_sync:prefs",
    "//express/components/brave_sync:sync_service_impl_helper",
    "//express/components/l10n/common",
    "//chrome/android:jni_headers",
    "//chrome/common",
    "//components/content_settings/core/browser",
    "//components/flags_ui",
    "//components/ntp_tiles",
    "//components/sync",
    "//components/translate/core/browser",
    "//components/unified_consent",
    "//third_party/leveldatabase",
    "//url",
  ]
}
