# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//express/components/brave_webtorrent/browser/buildflags/buildflags.gni")
import("//express/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

brave_browser_autocomplete_sources = [
  "//express/browser/autocomplete/brave_autocomplete_scheme_classifier.cc",
  "//express/browser/autocomplete/brave_autocomplete_scheme_classifier.h",
]

brave_browser_autocomplete_deps = [
  "//base",
  "//express/common",
  "//express/components/brave_webtorrent/browser/buildflags",
  "//express/components/ipfs/buildflags",
  "//chrome/browser/profiles:profile",
]

if (enable_extensions && enable_brave_webtorrent) {
  brave_browser_autocomplete_deps +=
      [ "//express/components/brave_webtorrent/browser" ]
}

if (enable_ipfs) {
  brave_browser_autocomplete_deps += [ "//express/components/ipfs" ]
}
