# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_browser_brave_adaptive_captcha_sources = [
  "//express/browser/brave_adaptive_captcha/brave_adaptive_captcha_service_factory.cc",
  "//express/browser/brave_adaptive_captcha/brave_adaptive_captcha_service_factory.h",
]

brave_browser_brave_adaptive_captcha_deps = [
  "//base",
  "//express/browser/profiles:util",
  "//express/components/brave_adaptive_captcha",
  "//express/components/brave_rewards/browser",
  "//chrome/browser/profiles:profile",
  "//components/keyed_service/content:content",
  "//components/user_prefs:user_prefs",
  "//content/public/browser",
  "//services/network/public/cpp:cpp",
]
