# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_browser_brave_ads_sources = [
  "//express/browser/brave_ads/ads_service_factory.cc",
  "//express/browser/brave_ads/ads_service_factory.h",
  "//express/browser/brave_ads/analytics/p3a/brave_stats_helper.cc",
  "//express/browser/brave_ads/analytics/p3a/brave_stats_helper.h",
  "//express/browser/brave_ads/application_state/background_helper/background_helper.cc",
  "//express/browser/brave_ads/application_state/background_helper/background_helper.h",
  "//express/browser/brave_ads/application_state/background_helper/background_helper_holder.cc",
  "//express/browser/brave_ads/application_state/background_helper/background_helper_holder.h",
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper.cc",
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper.h",
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl.cc",
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl.h",
  "//express/browser/brave_ads/tabs/ads_tab_helper.cc",
  "//express/browser/brave_ads/tabs/ads_tab_helper.h",
  "//express/browser/brave_ads/units/notification_ad/notification_ad_platform_bridge.h",
  "//express/browser/brave_ads/units/search_result_ad/search_result_ad_tab_helper.cc",
  "//express/browser/brave_ads/units/search_result_ad/search_result_ad_tab_helper.h",
]

brave_browser_brave_ads_deps = [
  "//base",
  "//express/browser/brave_ads/device_id",
  "//express/browser/brave_ads/services",
  "//express/browser/brave_rewards:util",
  "//express/browser/ui/brave_ads",
  "//express/components/brave_ads/browser",
  "//express/components/brave_ads/content/browser",
  "//express/components/brave_ads/core",
  "//express/components/brave_federated",
  "//express/components/brave_federated/public/interfaces",
  "//chrome/browser/notifications",
  "//chrome/browser/profiles",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//components/history/core/browser",
  "//components/keyed_service/content",
  "//components/sessions",
  "//content/public/browser",
  "//ui/base",
]

if (!is_android) {
  brave_browser_brave_ads_sources += [ "//express/browser/brave_ads/units/notification_ad/notification_ad_platform_bridge.cc" ]
}

if (is_android) {
  brave_browser_brave_ads_sources += [
    "//express/browser/brave_ads/android/brave_ads_native_helper.cc",
    "//express/browser/brave_ads/android/brave_ads_native_helper.h",
    "//express/browser/brave_ads/application_state/background_helper/background_helper_android.cc",
    "//express/browser/brave_ads/application_state/background_helper/background_helper_android.h",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_android.cc",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_android.h",
    "//express/browser/brave_ads/units/notification_ad/notification_ad_platform_bridge_android.cc",
  ]

  brave_browser_brave_ads_deps += [
    "//express/browser/brave_ads/android:jni_headers",
    "//express/build/android:jni_headers",
    "//chrome/android:jni_headers",
  ]
}

if (is_linux) {
  brave_browser_brave_ads_sources += [
    "//express/browser/brave_ads/application_state/background_helper/background_helper_linux.cc",
    "//express/browser/brave_ads/application_state/background_helper/background_helper_linux.h",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_linux.cc",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_linux.h",
  ]

  brave_browser_brave_ads_deps += [
    "//chrome/common",
    "//ui/aura",
    "//ui/base/x",
    "//ui/gfx/x",
  ]
}

if (is_mac) {
  brave_browser_brave_ads_sources += [
    "//express/browser/brave_ads/application_state/background_helper/background_helper_mac.h",
    "//express/browser/brave_ads/application_state/background_helper/background_helper_mac.mm",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_mac.h",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_mac.mm",
  ]

  brave_browser_brave_ads_deps += [ "//chrome/common" ]
}

if (is_win) {
  brave_browser_brave_ads_sources += [
    "//express/browser/brave_ads/application_state/background_helper/background_helper_win.cc",
    "//express/browser/brave_ads/application_state/background_helper/background_helper_win.h",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_win.cc",
    "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_win.h",
  ]

  brave_browser_brave_ads_deps += [
    "//express/browser/brave_ads/tooltips/",
    "//express/components/brave_adaptive_captcha:brave_adaptive_captcha",
    "//chrome/common",
    "//chrome/installer/util:with_no_strings",
    "//ui/gfx",
    "//ui/views",
  ]
}
