# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("brave_news") {
  sources = [
    "brave_news_controller_factory.cc",
    "brave_news_controller_factory.h",
  ]

  deps = [
    "//base",
    "//express/browser/profiles:util",
    "//express/components/brave_news/browser",
    "//express/components/brave_news/common",
    "//express/components/brave_news/common:mojom",
    "//chrome/browser:browser",
    "//chrome/browser/favicon",
    "//chrome/browser/profiles",
    "//chrome/browser/profiles:profile",
    "//components/favicon/core",
    "//components/keyed_service/content",
    "//components/user_prefs",
    "//content/public/browser",
  ]

  if (is_android) {
    sources += [ "android/brave_news_controller_factory_android.cc" ]
    deps += [ "//express/build/android:jni_headers" ]
  }
}

source_set("browser_tests") {
  testonly = true
  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

  if (!is_android) {
    sources = [ "brave_news_tab_helper_browsertest.cc" ]

    deps = [
      "//express/components//express_rewards/browser",
      "//express/components/brave_news/common:common",
      "//express/components/brave_news/common:mojom",
      "//express/components/constants",
      "//chrome/browser",
      "//chrome/browser/profiles",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/ui:ui",
      "//chrome/test:test_support_ui",
      "//content/test:test_support",
      "//net:test_support",
      "//testing/gmock",
      "//testing/gtest",
    ]
  }
}
