# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

brave_browser_brave_news_sources = []
brave_browser_brave_news_deps = []

if (is_android) {
  brave_browser_brave_news_sources += [ "//express/browser/brave_news/android/brave_news_controller_factory_android.cc" ]
}
brave_browser_brave_news_sources += [
  "//express/browser/brave_news/brave_news_controller_factory.cc",
  "//express/browser/brave_news/brave_news_controller_factory.h",
  "//express/browser/brave_news/brave_news_tab_helper.cc",
  "//express/browser/brave_news/brave_news_tab_helper.h",
]

brave_browser_brave_news_deps += [
  "//base",
  "//express/components/brave_news/browser",
  "//express/components/brave_news/common",
  "//chrome/browser/profiles:profile",
  "//components/keyed_service/content",
  "//content/public/browser",
  "//services/network/public/cpp",
]
