# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//express/components/greaselion/browser/buildflags/buildflags.gni")
import("//express/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

brave_browser_brave_rewards_sources = [
  "//express/browser/brave_rewards/rewards_prefs_util.cc",
  "//express/browser/brave_rewards/rewards_prefs_util.h",
  "//express/browser/brave_rewards/rewards_service_factory.cc",
  "//express/browser/brave_rewards/rewards_service_factory.h",
  "//express/browser/brave_rewards/rewards_tab_helper.cc",
  "//express/browser/brave_rewards/rewards_tab_helper.h",
]

brave_browser_brave_rewards_deps = [
  "//base",
  "//express/browser/brave_rewards:util",
  "//express/browser/profiles",
  "//express/browser/profiles:util",
  "//express/components/brave_rewards/browser",
  "//express/components/brave_rewards/common",
  "//express/components/brave_rewards/core:headers",
  "//express/components/ipfs/buildflags",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//components/keyed_service/content",
  "//components/prefs",
  "//components/sessions",
  "//extensions/buildflags",
]

if (enable_greaselion) {
  brave_browser_brave_rewards_deps +=
      [ "//express/components/greaselion/browser" ]
}

if (enable_extensions) {
  brave_browser_brave_rewards_sources += [
    "//express/browser/brave_rewards/extension_rewards_notification_service_observer.cc",
    "//express/browser/brave_rewards/extension_rewards_notification_service_observer.h",
    "//express/browser/brave_rewards/extension_rewards_service_observer.cc",
    "//express/browser/brave_rewards/extension_rewards_service_observer.h",
  ]

  brave_browser_brave_rewards_deps += [
    "//express/browser/extensions",
    "//express/common/extensions/api",
    "//chrome/browser/extensions",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/ui",
    "//extensions/browser",
  ]
}

if (enable_ipfs) {
  brave_browser_brave_rewards_deps += [ "//express/components/ipfs" ]
}

if (is_android) {
  brave_browser_brave_rewards_sources += [
    "//express/browser/brave_rewards/android/brave_rewards_native_worker.cc",
    "//express/browser/brave_rewards/android/brave_rewards_native_worker.h",
  ]

  brave_browser_brave_rewards_deps += [ "//express/components/brave_ads/browser" ]
}

if (!is_android) {
  brave_browser_brave_rewards_deps +=
      [ "//express/components/brave_rewards/common:features" ]
}
