# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_browser_brave_shields_sources = [
  "//express/browser/brave_shields/ad_block_pref_service_factory.cc",
  "//express/browser/brave_shields/ad_block_pref_service_factory.h",
  "//express/browser/brave_shields/ad_block_subscription_download_manager_getter.cc",
  "//express/browser/brave_shields/ad_block_subscription_download_manager_getter.h",
  "//express/browser/brave_shields/brave_shields_web_contents_observer.cc",
  "//express/browser/brave_shields/brave_shields_web_contents_observer.h",
  "//express/browser/brave_shields/cookie_list_opt_in_service_factory.cc",
  "//express/browser/brave_shields/cookie_list_opt_in_service_factory.h",
  "//express/browser/brave_shields/filter_list_service_factory.cc",
  "//express/browser/brave_shields/filter_list_service_factory.h",
  "//express/browser/brave_shields/https_everywhere_component_installer.cc",
  "//express/browser/brave_shields/https_everywhere_component_installer.h",
]

brave_browser_brave_shields_deps = [
  "//base",
  "//express/browser:browser_process",
  "//express/common",
  "//express/components/brave_perf_predictor/browser",
  "//express/components/brave_shields/browser",
  "//express/components/brave_shields/common",
  "//express/components/constants",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/keyed_service/content",
  "//components/prefs",
  "//content/public/browser",
  "//ipc",
  "//mojo/public/cpp/bindings",
]

if (is_android) {
  brave_browser_brave_shields_sources += [
    "//express/browser/brave_shields/android/filter_list_service_factory_android.cc",
    "//express/browser/brave_shields/brave_shields_web_contents_observer_android.cc",
  ]
  brave_browser_brave_shields_deps += [
    "//express/browser/android:android_browser_process",
    "//express/build/android:jni_headers",
  ]
}
