# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_browser_brave_stats_updater_sources = [
  "//express/browser/brave_stats/brave_stats_updater.cc",
  "//express/browser/brave_stats/brave_stats_updater.h",
  "//express/browser/brave_stats/brave_stats_updater_params.cc",
  "//express/browser/brave_stats/brave_stats_updater_params.h",
  "//express/browser/brave_stats/first_run_util.cc",
  "//express/browser/brave_stats/first_run_util.h",
  "//express/browser/brave_stats/switches.h",
]

brave_browser_brave_stats_updater_deps = [
  "//base",
  "//express/browser:browser_process",
  "//express/browser/brave_stats:buildflags",
  "//express/common",
  "//express/components/brave_ads/core",
  "//express/components/brave_referrals/common",
  "//express/components/brave_stats/browser",
  "//express/components/brave_wallet/browser",
  "//express/components/constants",
  "//express/components/rpill/common",
  "//express/components/version_info",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/browser/ui",
  "//chrome/common",
  "//components/prefs",
  "//net",
  "//services/network/public/cpp",
]
