# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//express/components/brave_vpn/common/buildflags/buildflags.gni")

brave_browser_brave_vpn_sources = []
brave_browser_brave_vpn_deps = []

if (enable_brave_vpn) {
  brave_browser_brave_vpn_sources += [
    "//express/browser/brave_vpn/brave_vpn_service_factory.cc",
    "//express/browser/brave_vpn/brave_vpn_service_factory.h",
    "//express/browser/brave_vpn/vpn_utils.cc",
    "//express/browser/brave_vpn/vpn_utils.h",
  ]
  if (is_win) {
    brave_browser_brave_vpn_sources += [
      "//express/browser/brave_vpn/dns/brave_vpn_dns_observer_factory_win.cc",
      "//express/browser/brave_vpn/dns/brave_vpn_dns_observer_factory_win.h",
      "//express/browser/brave_vpn/dns/brave_vpn_dns_observer_service_win.cc",
      "//express/browser/brave_vpn/dns/brave_vpn_dns_observer_service_win.h",
      "//express/browser/brave_vpn/win/brave_vpn_wireguard_observer_factory_win.cc",
      "//express/browser/brave_vpn/win/brave_vpn_wireguard_observer_factory_win.h",
      "//express/browser/brave_vpn/win/brave_vpn_wireguard_observer_service_win.cc",
      "//express/browser/brave_vpn/win/brave_vpn_wireguard_observer_service_win.h",
    ]

    brave_browser_brave_vpn_deps += [
      "//express/app:brave_generated_resources_grit",
      "//express/browser:browser_process",
      "//express/components/brave_vpn/browser/connection/ikev2/win/brave_vpn_helper:common",
      "//express/components/brave_vpn/common/win",
      "//express/components/brave_vpn/common/wireguard/win",
      "//chrome/common:constants",
      "//components/prefs",
      "//net",
      "//third_party/abseil-cpp:absl",
    ]
  }
  brave_browser_brave_vpn_deps += [
    "//base",
    "//express/components/brave_vpn/browser",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/content",
    "//components/user_prefs",
    "//content/public/browser",
  ]

  if (is_android) {
    brave_browser_brave_vpn_sources += [
      "//express/browser/brave_vpn/android/brave_vpn_native_worker.cc",
      "//express/browser/brave_vpn/android/brave_vpn_native_worker.h",
    ]
    brave_browser_brave_vpn_deps += [ "//express/build/android:jni_headers" ]
  }
}
