# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//express/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

brave_browser_browsing_data_sources = [
  "//express/browser/browsing_data/brave_browsing_data_remover_delegate.cc",
  "//express/browser/browsing_data/brave_browsing_data_remover_delegate.h",
  "//express/browser/browsing_data/brave_clear_browsing_data.cc",
  "//express/browser/browsing_data/brave_clear_browsing_data.h",
]

brave_browser_browsing_data_deps = [
  "//base",
  "//express/components/ipfs/buildflags",
  "//chrome/browser:browser_process",
  "//chrome/browser/browsing_data:constants",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/browsing_data/core",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/prefs",
  "//content/public/browser",
]

if (enable_extensions) {
  brave_browser_browsing_data_deps += [
    "//express/common/extensions/api",
    "//extensions/browser",
  ]
}

if (enable_ipfs) {
  brave_browser_browsing_data_deps += [ "//express/components/ipfs" ]
}
