brave_browser_debounce_sources = [
  "//express/browser/debounce/debounce_service_factory.cc",
  "//express/browser/debounce/debounce_service_factory.h",
]

brave_browser_debounce_deps = [
  "//base",
  "//express/components/debounce/browser",
  "//express/components/debounce/common",
  "//express/extensions:common",
  "//chrome/common",
  "//components/keyed_service/content",
]
