import("//express/browser/ethereum_remote_client/buildflags/buildflags.gni")
import("//express/build/config.gni")
import("//build/config/features.gni")

assert(ethereum_remote_client_enabled)

source_set("ethereum_remote_client") {
  include_dirs = [ "//express/third_party/ethash/src/include" ]

  sources = [
    "ethereum_remote_client_constants.cc",
    "ethereum_remote_client_constants.h",
    "ethereum_remote_client_delegate.h",
    "ethereum_remote_client_service.cc",
    "ethereum_remote_client_service.h",
    "features.cc",
    "features.h",
    "pref_names.cc",
    "pref_names.h",
  ]

  deps = [
    "//base",
    "//express/components/brave_wallet/browser",
    "//express/components/brave_wallet/browser:pref_names",
    "//express/components/brave_wallet/browser:utils",
    "//express/components/brave_wallet/common",
    "//express/components/brave_wallet/common:mojom",
    "//components/content_settings/core/browser",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//crypto",
    "//extensions/browser",
    "//services/network/public/cpp",
    "//url",
  ]
}

source_set("browser") {
  sources = [
    "ethereum_remote_client_delegate_impl.cc",
    "ethereum_remote_client_delegate_impl.h",
    "ethereum_remote_client_service_factory.cc",
    "ethereum_remote_client_service_factory.h",
  ]
  deps = [
    "//express/browser/ethereum_remote_client",
    "//express/browser/extensions",
    "//chrome/browser/extensions",
    "//chrome/browser/profiles",
    "//components/keyed_service/content",
    "//extensions/browser",
  ]
}
