import("//express/components/greaselion/browser/buildflags/buildflags.gni")

brave_browser_greaselion_sources = []
brave_browser_greaselion_deps = []

if (enable_greaselion) {
  brave_browser_greaselion_sources += [
    "//express/browser/greaselion/greaselion_service_factory.cc",
    "//express/browser/greaselion/greaselion_service_factory.h",
    "//express/browser/greaselion/greaselion_tab_helper.cc",
    "//express/browser/greaselion/greaselion_tab_helper.h",
  ]

  brave_browser_greaselion_deps += [
    "//base",
    "//express/components/greaselion/browser",
    "//chrome/common",
    "//components/keyed_service/content",
    "//extensions/browser",
  ]
}
