# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//extensions/buildflags/buildflags.gni")

brave_browser_importer_sources = []
brave_browser_importer_deps = []

if (!is_android) {
  brave_browser_importer_sources += [
    "//express/browser/importer/brave_external_process_importer_client.cc",
    "//express/browser/importer/brave_external_process_importer_client.h",
    "//express/browser/importer/brave_external_process_importer_host.cc",
    "//express/browser/importer/brave_external_process_importer_host.h",
    "//express/browser/importer/brave_in_process_importer_bridge.cc",
    "//express/browser/importer/brave_in_process_importer_bridge.h",
  ]
  if (enable_extensions) {
    brave_browser_importer_sources += [
      "//express/browser/importer/extensions_import_helpers.cc",
      "//express/browser/importer/extensions_import_helpers.h",
    ]
    brave_browser_importer_deps += [
      "//express/common/importer",
      "//components/value_store",
      "//extensions/browser",
      "//extensions/common:common_constants",
    ]
  }
  brave_browser_importer_deps += [
    "//base",
    "//express/common/importer:interfaces",
    "//content/public/browser",
    "//extensions/buildflags",
    "//mojo/public/cpp/bindings:bindings",
  ]
}
