# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//express/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

brave_browser_ipfs_sources = []
brave_browser_ipfs_deps = []

if (enable_ipfs) {
  brave_browser_ipfs_sources += [
    "//express/browser/ipfs/content_browser_client_helper.cc",
    "//express/browser/ipfs/content_browser_client_helper.h",
    "//express/browser/ipfs/import/ipfs_import_controller.cc",
    "//express/browser/ipfs/import/ipfs_import_controller.h",
    "//express/browser/ipfs/import/save_package_observer.cc",
    "//express/browser/ipfs/import/save_package_observer.h",
    "//express/browser/ipfs/ipfs_blob_context_getter_factory.cc",
    "//express/browser/ipfs/ipfs_blob_context_getter_factory.h",
    "//express/browser/ipfs/ipfs_dns_resolver_impl.cc",
    "//express/browser/ipfs/ipfs_dns_resolver_impl.h",
    "//express/browser/ipfs/ipfs_host_resolver.cc",
    "//express/browser/ipfs/ipfs_host_resolver.h",
    "//express/browser/ipfs/ipfs_service_factory.cc",
    "//express/browser/ipfs/ipfs_service_factory.h",
    "//express/browser/ipfs/ipfs_subframe_navigation_throttle.cc",
    "//express/browser/ipfs/ipfs_subframe_navigation_throttle.h",
    "//express/browser/ipfs/ipfs_tab_helper.cc",
    "//express/browser/ipfs/ipfs_tab_helper.h",
  ]

  brave_browser_ipfs_deps += [
    "//base",
    "//express/browser/profiles:util",
    "//express/common",
    "//express/components/ipfs",
    "//express/components/services/ipfs/public/mojom",
    "//chrome/browser:browser_process",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/ui",
    "//chrome/common:channel_info",
    "//chrome/common:constants",
    "//components/keyed_service/content",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//extensions/buildflags",
    "//services/network/public/mojom",
    "//ui/base/clipboard",
    "//ui/message_center/public/cpp",
    "//ui/shell_dialogs",
  ]

  if (enable_ipfs_local_node) {
    brave_browser_ipfs_sources += [
      "//express/browser/ipfs/ipfs_local_pin_service_factory.cc",
      "//express/browser/ipfs/ipfs_local_pin_service_factory.h",
    ]
  }

  if (enable_extensions) {
    brave_browser_ipfs_deps += [
      "//extensions/browser",
      "//extensions/common",
    ]
  }
}
