# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//express/components/ai_chat/common/buildflags/buildflags.gni")

brave_browser_misc_metrics_sources = [
  "//express/browser/misc_metrics/doh_metrics.cc",
  "//express/browser/misc_metrics/doh_metrics.h",
  "//express/browser/misc_metrics/page_metrics_service_factory.cc",
  "//express/browser/misc_metrics/page_metrics_service_factory.h",
  "//express/browser/misc_metrics/page_metrics_tab_helper.cc",
  "//express/browser/misc_metrics/page_metrics_tab_helper.h",
  "//express/browser/misc_metrics/process_misc_metrics.cc",
  "//express/browser/misc_metrics/process_misc_metrics.h",
]

if (!is_android) {
  brave_browser_misc_metrics_sources += [
    "//express/browser/misc_metrics/vertical_tab_metrics.cc",
    "//express/browser/misc_metrics/vertical_tab_metrics.h",
  ]
} else {
  brave_browser_misc_metrics_sources += [
    "//express/browser/misc_metrics/misc_android_metrics.cc",
    "//express/browser/misc_metrics/misc_android_metrics.h",
    "//express/browser/misc_metrics/misc_android_metrics_factory.cc",
    "//express/browser/misc_metrics/misc_android_metrics_factory.h",
  ]
}

brave_browser_misc_metrics_deps = [
  "//express/browser:browser_process",
  "//express/browser/profiles:util",
  "//express/components/ai_chat/common/buildflags",
  "//express/components/misc_metrics",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profiles",
  "//components/keyed_service/content",
  "//components/keyed_service/core",
  "//content/public/browser",
]

if (enable_ai_chat) {
  brave_browser_misc_metrics_deps += [ "//express/components/ai_chat/core" ]
}

brave_browser_misc_metrics_android_sources =
    [ "//express/browser/misc_metrics/misc_android_metrics_factory_android.cc" ]
